refactor: frontend dry and soc
